# napari-lazy-openslide

./: .gitignore  LICENSE  README.md  create_fixtures.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: create_fixtures.py
examples/channels_astronaut.zarr/blue/: .zarray  0.0  1.0
examples/channels_astronaut.zarr/green/: 0.0  1.0
examples/channels_astronaut.zarr/red/: 0.0  1.0
examples/rgb_astronaut.zarr/: .zarray  0.0.0
fixtures/: create_fixtures.py  dataset.ome.tif
napari_lazy_openslide/: __init__.py  lazy_openslide.py  store.py
napari_lazy_openslide/_tests/: test_lazy_openslide.py
napari_zarr_io/: __init__.py  zarr_io.py
napari_zarr_io/_tests/: test_zarr_io.py
