[metadata]
name = napari-lazy-openslide
author = Trevor Manz
author_email = trevor.j.manz@gmail.com
license = BSD-3
url = https://github.com/manzt/napari-lazy-openslide
description = A plugin to lazily load multiscale whole-slide images with openslide and dask
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Framework :: napari

[options]
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    napari-plugin-engine>=0.1.4
    zarr=>=2.11
    numpy
    dask[array]
    openslide-python

[options.entry_points]
napari.plugin =
    lazy-openslide = napari_lazy_openslide
